feat: add author attribution to the footer text.

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-          <p>Made with 💚 to help you save wisely</p>
+          <p>Made with 💚 to help you save wisely by Jnanesh</p>
         </footer>
       </div>
 
