feat: Add Bought It button and Help modal

--- a/index.html
+++ b/index.html
@@ -204,13 +204,23 @@
           </div>
         </div>
 
-        <!-- Celebration Overlay -->
+        <!-- Celebration Overlay (Skip/Save) -->
         <div id="celebration-overlay" class="celebration-overlay hidden">
           <div class="celebration-content">
             <div class="celebration-emoji">🎉</div>
             <h2>Amazing Decision!</h2>
             <p id="celebration-message">You just saved 6 days of work!</p>
             <div class="confetti-container" id="confetti"></div>
+          </div>
+        </div>
+
+        <!-- Purchase Celebration Overlay (Bought It) -->
+        <div id="purchase-overlay" class="celebration-overlay purchase-overlay hidden">
+          <div class="celebration-content">
+            <div class="celebration-emoji" id="purchase-emoji">🛍️</div>
+            <h2 id="purchase-title">Enjoy Your Purchase!</h2>
+            <p id="purchase-message">You made a mindful decision!</p>
+            <div class="confetti-container" id="purchase-confetti"></div>
           </div>
         </div>
 
