chore: Update author initials in the footer.

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-          <p>Made with 💚 to help you save wisely by Jnanesh</p>
+          <p>Made with 💚 to help you save wisely by JND</p>
         </footer>
       </div>
 
