fix: Prevent URL bar from hiding on mobile scroll

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <span class="bg-icon">💰</span>
     </div>
 
-    <div id="app">
+    <div id="app" class="app-wrapper">
       <!-- Onboarding Screen -->
       <div id="onboarding-screen" class="screen">
         <div class="onboarding-container">
